[tool.poetry]
name = "ident"
version = "0.1.0"
description = ""
authors = ["getaddrinfo <oss@getaddrinfo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
foundationdb = "6.3.25"
protobuf = "^4.24.3"
snowflake-id = "^0.0.4"
pydantic = "^2.4.2"
cattrs = "^23.1.2"
gunicorn = "^21.2.0"
pynacl = "^1.5.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
